[workspace]

members = [
    "smwe-project",
    "smwe-rom",
    "smwe-widgets",
]

[package]
name = "smw-editor"
version = "0.1.0"
authors = ["Adam Gąsior (Adanos020)", "Raven Szewczyk (eigenraven)"]
license = "MIT"
edition = "2021"
readme = "README.md"
rust-version = "1.65"

[dependencies]
smwe-project = { path = "smwe-project" }
smwe-rom = { path = "smwe-rom" }
smwe-widgets = { path = "smwe-widgets" }

anyhow = "1.0"
eframe = { git = "https://github.com/emilk/egui" }
egui_extras = { git = "https://github.com/emilk/egui" }
inline_tweak = "1.0"
itertools = "0.10"
log = "0.4"
log4rs = "1.0"
nfd2 = "0.3"
num = "0.4"
num_enum = "0.5"
thiserror = "1.0"
