[workspace]

members = [
    "crates/smwe-emu",
    "crates/smwe-math",
    "crates/smwe-math/wrapped_vec2_derive",
    "crates/smwe-math/wrapped_pos2_derive",
    "crates/smwe-math/wrapped_rect_derive",
    "crates/smwe-render",
    "crates/smwe-rom",
    "crates/smwe-widgets",
    "crates/wdc65816",
]

[package]
name = "smw-editor"
version = "0.1.0"
authors = ["Adam Gąsior (Adanos020)", "Raven Szewczyk (eigenraven)", "Selicre"]
license = "MIT"
edition = "2021"
readme = "README.md"
rust-version = "1.70"

[dependencies]
smwe-emu = { path = "crates/smwe-emu" }
smwe-math = { path = "crates/smwe-math" }
smwe-render = { path = "crates/smwe-render" }
smwe-rom = { path = "crates/smwe-rom" }
smwe-widgets = { path = "crates/smwe-widgets" }
wdc65816 = { path = "crates/wdc65816" }

anyhow = "1.0"
duplicate = "1.0"
eframe = "0.24"
egui = { version = "0.24", features = ["serde"] }
egui_dock = "0.9"
egui_extras = "0.24"
egui_glow = "0.24"
egui-phosphor = "0.3"
glow = "0.12"
inline_tweak = "1.0"
itertools = "0.12"
log = "0.4"
log4rs = "1.0"
num = "0.4"
num_enum = "0.7"
paste = "1.0"
rfd = "0.12"
serde = "1.0"
serde_json = "1.0"
shrinkwraprs = "0.3"
thiserror = "1.0"
zstd = { version = "0.13", features = ["experimental"] }
