[package]
name = "nsmwe_ui"
version = "0.1.0"
authors = ["Adam Gąsior (Adanos020)"]
edition = "2018"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nsmwe_project = { path = "../nsmwe_project" }
nsmwe_rom = { path = "../nsmwe_rom" }

imgui = "0.7.0"
inline_tweak = "1.0.8"
log = "0.4.14"
nfd2 = "0.2.3"
