[package]
name = "smwe-widgets"
version = "0.1.0"
authors = ["Adam Gąsior (Adanos020)", "Raven Szewczyk (eigenraven)"]
license = "MIT"
edition = "2021"
rust-version = "1.65"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
egui = { git = "https://github.com/emilk/egui" }
itertools = "0.10"
thiserror = "1.0"
