[package]
name = "smwe_rom"
version = "0.1.0"
authors = ["Adam Gąsior (Adanos020)", "Jakub Szewczyk (kubasz)"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
nom = "6.1"
num_enum = "0.5"
thiserror = "1.0"
itertools = "0.10"
