[package]
name = "smwe_rom"
version = "0.1.0"
authors = ["Adam Gąsior (Adanos020)", "Raven Szewczyk (eigenraven)"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
epaint = "0.19"
itertools = "0.10"
log = "0.4"
nom = "7.0"
num_enum = "0.5"
paste = "1.0"
thiserror = "1.0"
smallvec = { version = "1.7", features = ["write", "union", "const_generics", "const_new"] }
