[package]
name = "smwe-render"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smwe-emu = { path = "../smwe-emu" }
smwe-math = { path = "../smwe-math" }

emath = "0.22"
epaint = "0.22"
glow = "0.12"
itertools = "0.11"
log = "0.4"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
