[package]
name = "smwe-rom"
version = "0.1.0"
authors = ["Adam Gąsior (Adanos020)", "Raven Szewczyk (eigenraven)"]
edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smwe-render = { path = "../smwe-render" }

anyhow = "1.0"
duplicate = "1.0"
epaint = "0.24"
itertools = "0.12"
log = "0.4"
nom = "7.0"
num-traits = "0.2"
num_enum = "0.7"
paste = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smallvec = { version = "1.7", features = ["write", "union", "const_generics", "const_new"] }
