[package]
name = "smwe-widgets"
version = "0.1.0"
authors = ["Adam Gąsior (Adanos020)", "Raven Szewczyk (eigenraven)"]
license = "MIT"
edition = "2021"
rust-version = "1.65"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smwe-emu = { path = "../smwe-emu" }
smwe-render = { path = "../smwe-render" }

anyhow = "1.0"
egui = "0.21"
egui_glow = "0.21"
egui-phosphor = "0.1"
itertools = "0.10"
thiserror = "1.0"
