[package]
name = "smwe-widgets"
version = "0.1.0"
authors = ["Adam Gąsior (Adanos020)", "Raven Szewczyk (eigenraven)"]
license = "MIT"
edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smwe-emu = { path = "../smwe-emu" }
smwe-render = { path = "../smwe-render" }

anyhow = "1.0"
egui = "0.24"
egui_glow = "0.24"
egui-phosphor = "0.3"
glow = "0.13"
inline_tweak = "1.0"
itertools = "0.12"
thiserror = "1.0"
